--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.header{
+    align-items: center;
+    height: 80px;
+    font-weight: bold;
+    font-size: medium;
+}
+
+
 body {
 background-color:#004F51;
 background-size: cover;
@@ -9,9 +17,11 @@ font-family: 'Poppins',
 
 .logo {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 120px;
+    top: 10px;
+    left: 10px;
+    width: 80px;
+    mix-blend-mode: multiply;
+    align-items: flex-start;
 
 }
 
@@ -31,14 +41,18 @@ h1{
 }
 
 .menu ul li {
-    display: block;
+    display: inline-block;
+    align-items: center;
+    justify-content: space-between;
     margin: 0 15px;
     color: #f7e4c3f8;
+    flex-direction: column;
 }
 .menu ul li a {
     color: #f7e4c3f8;
     font-size: medium;
     font-weight: 200;
+    font-size: x-large;
 
 }
 
@@ -46,6 +60,7 @@ h2 {
     color: #f7e4c3f8;
     text-align: center;
     font-weight: 700;
+    align-items: center;
 }
 
 .coders {
@@ -56,7 +71,50 @@ h2 {
     max-width: 100%;
     border-radius: 40px;
 }
+.content{
+     color: #f7e4c3f8;
+    text-align: center;
+    font-weight: 700;
+    font-size: large;
+}
+
+.dropbtn {
+  background-color: teal;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  float: right;
+}
 
 
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: teal;}
