--- a/style3.css
+++ b/style3.css
@@ -18,6 +18,104 @@ body {
   padding-bottom: 40px;
   color: #fff;
 }
+/* Header style */
+.header{
+    display: flex;
+    justify-content: center;
+    height: 80px;
+    font-weight: bold;
+    font-size: medium;
+    padding-top: 30px;
+    background: #013b3c;
+}
+
+h1{
+    text-align: center;
+    color: #f7e4c3f8;
+    font-size: 30px;
+    font-weight: 900px;
+    padding-right: 80px;
+    padding-top: 10px;
+}
+
+
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: right;
+    text-decoration-color: #f7e4c3f8;
+}
+
+.menu ul li {
+    display: inline-block;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 15px;
+    color: #f7e4c3f8;
+    flex-direction: column;
+}
+.menu ul li a {
+    color: #f7e4c3f8;
+    font-size: medium;
+    font-weight: 200;
+    font-size: x-large;
+
+}
+
+.dropbtn {
+  background-color: teal;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.home-btn{
+  background-color: teal;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: teal;}
+
 /* picture and bio styling */
 .bio {
   background: #004f51;
