--- a/style.css
+++ b/style.css
@@ -1,81 +1,120 @@
-.header{
-    align-items: center;
-    height: 80px;
-    font-weight: bold;
-    font-size: medium;
+.header {
+  display: flex;
+  justify-content: center;
+  height: 80px;
+  font-weight: bold;
+  font-size: medium;
+  padding-bottom: 50px;
 }
-
 
 body {
-background-color:#004F51;
-background-size: cover;
-font-family: 'Poppins',
-    sans-serif;
+  background-image: url(background.jpg);
+  background-size: cover;
+  font-family: "Poppins", sans-serif;
 }
 
+.description {
+  background: #034143;
+  border-radius: 5px;
+  width: 200px;
+  cursor: pointer;
+  transition: ease 0.5s all;
+  box-shadow: 0 4px 8px rgba(14, 14, 14, 0.2);
+  color: #fff;
+}
 
+.description h2 {
+  font-weight: 800;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.description {
+  width: 400px;
+  height: 350px;
+  object-fit: cover;
+  border-radius: 8px;
+  flex-shrink: 0;
+  margin-bottom: 30px;
+  margin-right: 8px;
+  margin-left: 8px;
+  padding: 10px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.slogan h2 {
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 50px;
+}
 
 .logo {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: 80px;
-    mix-blend-mode: multiply;
-    align-items: flex-start;
-
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 80px;
+  mix-blend-mode: multiply;
+  align-items: flex-start;
+  padding-top: 200px;
 }
 
-h1{
-    text-align: center;
-    color: #f7e4c3f8;
-    font-size: 80px;
-    font-weight: 900px;
+h1 {
+  text-align: center;
+  color: #f7e4c3f8;
+  font-size: 80px;
+  font-weight: 900px;
 }
 
 .menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: right;
-    text-decoration-color: #f7e4c3f8;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: right;
+  text-decoration-color: #f7e4c3f8;
 }
 
 .menu ul li {
-    display: inline-block;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 15px;
-    color: #f7e4c3f8;
-    flex-direction: column;
+  display: inline-block;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 15px;
+  color: #f7e4c3f8;
+  flex-direction: column;
 }
 .menu ul li a {
-    color: #f7e4c3f8;
-    font-size: medium;
-    font-weight: 200;
-    font-size: x-large;
-
+  color: #f7e4c3f8;
+  font-size: medium;
+  font-weight: 200;
+  font-size: x-large;
 }
 
 h2 {
-    color: #f7e4c3f8;
-    text-align: center;
-    font-weight: 700;
-    align-items: center;
+  color: #f7e4c3f8;
+  text-align: center;
+  font-weight: 1000;
+  align-items: center;
 }
 
 .coders {
-    display: block;
-    margin: 0 auto;
-    width: 900px;
-    height: 700px;
-    max-width: 100%;
-    border-radius: 40px;
+  display: block;
+  margin: 0 auto;
+  width: 900px;
+  height: 700px;
+  max-width: 100%;
+  border-radius: 40px;
 }
-.content{
-     color: #f7e4c3f8;
-    text-align: center;
-    font-weight: 700;
-    font-size: large;
+.content {
+  color: #f7e4c3f8;
+  text-align: center;
+  font-weight: 700;
+  font-size: large;
 }
 
 .dropbtn {
@@ -84,8 +123,8 @@ h2 {
   padding: 16px;
   font-size: 16px;
   border: none;
+  border-radius: 8px;
 }
-
 
 .dropdown {
   position: relative;
@@ -93,17 +132,14 @@ h2 {
   float: right;
 }
 
-
-
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
-
 
 .dropdown-content a {
   color: black;
@@ -112,9 +148,14 @@ h2 {
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: teal;}
+.dropdown:hover .dropbtn {
+  background-color: teal;
+}
